--- a/paginas-oboticario/tcc.produtos-main/Paginas-boticario/produtos-main/TCC-main/index2.html
+++ b/paginas-oboticario/tcc.produtos-main/Paginas-boticario/produtos-main/TCC-main/index2.html
@@ -10,12 +10,11 @@
   <link rel="stylesheet" href="./css/footerfem.css">
   <link rel="stylesheet" href="./css/cabeçalho.css">
   <link rel="stylesheet" href="./css/body.css">
-  <link rel="stylesheet" href="./css/responsivo.css">
+  <link rel="stylesheet" href="./css/responsivofem.css">
   <link rel="stylesheet" href="./css/botaofem.css">
   <link rel="stylesheet" href="./css/nextfem.css">
-  <link rel="stylesheet" href="./css/nextfem.css">
   <link rel="shortcut icon" href="logo/logo_sem_tipografia.png" type="image/x-icon">
-
+ </head>
 
 <body>
 
@@ -75,8 +74,8 @@
     </button>
   </div>
   <br>
-  <div class="caixabotao" >
-    <a class="botaoLink" href="./index.html"><button>Página masculina</button></a>
+  <div class="caixabotao">
+    <a class="botaoLink" href="./boticariomasculino.html"><button>Página masculina</button></a>
 
     <a class="botaoLink" href="/index.html"><button>Inicío</button></a>
   </div>
