--- a/paginas-oboticario/tcc.produtos-main/Paginas-boticario/produtos-main/TCC-main/boticariomasculino.html
+++ b/paginas-oboticario/tcc.produtos-main/Paginas-boticario/produtos-main/TCC-main/boticariomasculino.html
@@ -25,13 +25,13 @@
     <div class="menus">
       <img class="logoheader" src="logo/tipografia.png" alt="#" width="220px">
 
-      <a href="/index.html">
+      <a href="../../../../../index.html">
         <li class="menu">Home</li>
       </a>
-      <a href="/natura masculino/index.html">
+      <a href="../../../../../natura masculino/index.html">
         <li class="menu">Natura</li>
       </a>
-      <a href="/Avon-masculino/index.html">
+      <a href="../../../../../Avon-masculino/index.html">
         <li class="menu">Avon</li>
       </a>
     </div>
