--- a/paginas-oboticario/tcc.produtos-main/Paginas-boticario/produtos-main/TCC-main/index2.html
+++ b/paginas-oboticario/tcc.produtos-main/Paginas-boticario/produtos-main/TCC-main/index2.html
@@ -26,13 +26,13 @@
     <div class="menus">
       <img class="logoheader" src="logo/tipografia.png" alt="#" width="220px">
 
-      <a href="/index.html">
+      <a href="../../../../../index.html">
         <li class="menu">Home</li>
       </a>
-      <a href="/pagina feminina natura/naturafeminino.html">
+      <a href="../../../../../pagina feminina natura/naturafeminino.html">
         <li class="menu">Natura</li>
       </a>
-      <a href="/avonFeminino/avonFeminino.html">
+      <a href="../../../../../avonFeminino/avonFeminino.html">
         <li class="menu">Avon</li>
       </a>
     </div>
@@ -77,7 +77,7 @@
   <div class="caixabotao">
     <a class="botaoLink" href="./boticariomasculino.html"><button>Página masculina</button></a>
 
-    <a class="botaoLink" href="/index.html"><button>Inicío</button></a>
+    <a class="botaoLink" href="../../../../../index.html"><button>Inicío</button></a>
   </div>
   <br>
   <!-- Cards -->
