--- a/avonFeminino/avonFeminino.html
+++ b/avonFeminino/avonFeminino.html
@@ -81,7 +81,7 @@
               </div>
               </div>
               <div class="card-botao">
-                <a href=""><button>Comprar</button></a>
+                <a href="https://api.whatsapp.com/send?phone=5511930672885&amp;text=%20Gostaria%20de%20saber%20mais%20sobre o produto Far Away Infinity Deo Parfum"><button>Comprar</button></a>
               </div>
           </div>
 
@@ -98,7 +98,7 @@
               </div>
             </div>
             <div class="card-botao">
-              <a href=""><button>Comprar</button></a>
+              <a href="https://api.whatsapp.com/send?phone=5511930672885&amp;text=%20Gostaria%20de%20saber%20mais%20sobre o produto Deo Parfum Deo Parfum Far Away Splendoria"><button>Comprar</button></a>
             </div>
           </div>
 
@@ -115,7 +115,7 @@
               </div>
             </div>
             <div class="card-botao">
-              <a href=""><button>Comprar</button></a>
+              <a href="https://api.whatsapp.com/send?phone=5511930672885&amp;text=%20Gostaria%20de%20saber%20mais%20sobre o produto Deo Parfum Far Away Gold Deo Parfum"><button>Comprar</button></a>
             </div>
           </div>
 
@@ -132,7 +132,7 @@
               </div>
             </div>
             <div class="card-botao">
-              <a href=""><button>Comprar</button></a>
+              <a href="https://api.whatsapp.com/send?phone=5511930672885&amp;text=%20Gostaria%20de%20saber%20mais%20sobre o produto Deo Parfum Far Away Glamour Deo"><button>Comprar</button></a>
             </div>
           </div>
 
@@ -149,7 +149,7 @@
               </div>
             </div>
             <div class="card-botao">
-              <a href=""><button>Comprar</button></a>
+              <a href="https://api.whatsapp.com/send?phone=5511930672885&amp;text=%20Gostaria%20de%20saber%20mais%20sobre o produto Surreal Garden"><button>Comprar</button></a>
             </div>
           </div>
 
@@ -166,7 +166,7 @@
               </div>
             </div>
             <div class="card-botao">
-              <a href=""><button>Comprar</button></a>
+              <a href="https://api.whatsapp.com/send?phone=5511930672885&amp;text=%20Gostaria%20de%20saber%20mais%20sobre o produto Mulher Poesia Luz dos Olhos Teus Deo Colônia"><button>Comprar</button></a>
             </div>
           </div>
 
@@ -183,7 +183,7 @@
               </div>
             </div>
             <div class="card-botao">
-              <a href=""><button>Comprar</button></a>
+              <a href="https://api.whatsapp.com/send?phone=5511930672885&amp;text=%20Gostaria%20de%20saber%20mais%20sobre o produto Mulher Poesia Morena Flor"><button>Comprar</button></a>
             </div>
           </div>
 
@@ -200,7 +200,7 @@
               </div>
             </div>
             <div class="card-botao">
-              <a href=""><button>Comprar</button></a>
+              <a href="https://api.whatsapp.com/send?phone=5511930672885&amp;text=%20Gostaria%20de%20saber%20mais%20sobre o produto Deo Parfum Luiza Brunet Poderosa Deo Parfum"><button>Comprar</button></a>
             </div>
           </div>
 
@@ -217,7 +217,7 @@
               </div>
             </div>
             <div class="card-botao">
-              <a href=""><button>Comprar</button></a>
+              <a href="https://api.whatsapp.com/send?phone=5511930672885&amp;text=%20Gostaria%20de%20saber%20mais%20sobre o produto Pur Blanca Noite Desodorante Colônia"><button>Comprar</button></a>
             </div>
           </div>
 
@@ -234,7 +234,7 @@
               </div>
             </div>
             <div class="card-botao">
-              <a href=""><button>Comprar</button></a>
+              <a href="https://api.whatsapp.com/send?phone=5511930672885&amp;text=%20Gostaria%20de%20saber%20mais%20sobre o produto Pur Blanca Original Desodorant"><button>Comprar</button></a>
             </div>
           </div>
 
@@ -251,7 +251,7 @@
               </div>
             </div>
             <div class="card-botao">
-              <a href=""><button>Comprar</button></a>
+              <a href="https://api.whatsapp.com/send?phone=5511930672885&amp;text=%20Gostaria%20de%20saber%20mais%20sobre o produto Deo Parfum Pur Blanca Serenity"><button>Comprar</button></a>
             </div>
           </div>
 
@@ -268,7 +268,7 @@
               </div>
               </div>
               <div class="card-botao">
-                <a href=""><button>Comprar</button></a>
+                <a href="https://api.whatsapp.com/send?phone=5511930672885&amp;text=%20Gostaria%20de%20saber%20mais%20sobre o produto Pur Blanca My Essence Desodorante"><button>Comprar</button></a>
               </div>
           </div>
         </div>
